--- a/CFR_VQA/requirements.txt
+++ b/CFR_VQA/requirements.txt
@@ -1,12 +1,12 @@
-h5py==2.9.0
-matplotlib==3.1.0
-torch==1.7.1
-opencv-python==4.1.0.25
-numpy==1.16.4
-Pillow==6.1.0
+h5py==3.7.0
+matplotlib==3.4.3
+torch==1.10.0
+opencv-python==4.5.3.56
+numpy==1.21.2
+Pillow==8.4.0
 dataset==1.1.2
-progressbar2==3.42.0
+progressbar2==3.53.1
 train==0.0.3
-boto3
-requests
-tqdm
+boto3==1.18.71
+requests==2.26.0
+tqdm==4.62.3
